--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,7 +30,7 @@ steps:
   - 'asia-east1'
   - '--allow-unauthenticated'
   - '--set-cloudsql-instances'
-  - 'gcpsa-sandbox:asia-east1:edward-db-test'
+  - 'gcpsa-sandbox:asia-east1:edward-mysql'
   - '--set-env-vars'
   - 'INSTANCE_UNIX_SOCKET=/cloudsql/gcpsa-sandbox:asia-east1:edward-mysql'
   - '--set-env-vars'
