--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,6 +44,7 @@ steps:
   entrypoint: gcloud
   args:
   - 'run'
+  - 'service'
   - 'update'
   - 'edward-cloudbuild-cloudrun'
   - '--add-cloudsql-instances'
