--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -51,11 +51,11 @@ steps:
   - 'gcpsa-sandbox:asia-east1:edward-mysql'
   - '--update-env-vars'
   - INSTANCE_CONNECTION_NAME=edward-secretm-run-db-connection-name
-  - '--update-env-vars'
+  - '--update-secrets'
   - DB_USER=edward-secretm-run-db-user
-  - '--update-env-vars'
+  - '--update-secrets'
   - DB_PASS=edward-secretm-run-db-pass
-  - '--update-env-vars'
+  - '--update-secrets'
   - DB_NAME=edward-secretm-run-db-dbname
   - '--region'
   - asia-east1
