--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,32 +33,75 @@ steps:
   - 'gcpsa-sandbox:asia-east1:edward-mysql'
   - '--set-env-vars'
   - 'INSTANCE_UNIX_SOCKET=/cloudsql/gcpsa-sandbox:asia-east1:edward-mysql'
-  - '--set-env-vars'
-  - DB_USER=edward
-  - '--set-env-vars'
-  - DB_PASS=1qaz@wsx
-  - '--set-env-vars'
-  - 'DB_NAME=quickstart-db'
-
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: gcloud
-  args:
-  - 'run'
-  - 'services'
-  - 'update'
-  - 'edward-cloudbuild-cloudrun'
-  - '--add-cloudsql-instances'
-  - 'gcpsa-sandbox:asia-east1:edward-mysql'
-  - '--update-env-vars'
-  - INSTANCE_CONNECTION_NAME=edward-secretm-run-db-connection-name
-  - '--update-secrets'
+  - '--set-secrets'
   - DB_USER=edward-secretm-run-db-user:latest
-  - '--update-secrets'
+  - '--set-secrets'
   - DB_PASS=edward-secretm-run-db-pass:latest
-  - '--update-secrets'
+  - '--set-secrets'
   - DB_NAME=edward-secretm-run-db-dbname:latest
-  - '--region'
-  - asia-east1
+
+# - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+#   entrypoint: gcloud
+#   args:
+#   - 'run'
+#   - 'services'
+#   - 'update'
+#   - 'edward-cloudbuild-cloudrun'
+#   - '--add-cloudsql-instances'
+#   - 'gcpsa-sandbox:asia-east1:edward-mysql'
+#   - '--update-env-vars'
+#   - INSTANCE_CONNECTION_NAME=edward-secretm-run-db-connection-name
+#   - '--update-secrets'
+#   - DB_USER=edward-secretm-run-db-user:latest
+#   - '--update-secrets'
+#   - DB_PASS=edward-secretm-run-db-pass:latest
+#   - '--update-secrets'
+#   - DB_NAME=edward-secretm-run-db-dbname:latest
+#   - '--region'
+#   - asia-east1
 
 images:
 - 'asia-east1-docker.pkg.dev/gcpsa-sandbox/edward-zu-repository/edward-zu-run-sql:tag1'
+
+
+# - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+#   entrypoint: gcloud
+#   args:
+#   - 'run'
+#   - 'deploy'
+#   - 'edward-cloudbuild-cloudrun'
+#   - '--image'
+#   - 'asia-east1-docker.pkg.dev/gcpsa-sandbox/edward-zu-repository/edward-zu-run-sql:tag1'
+#   - '--region'
+#   - 'asia-east1'
+#   - '--allow-unauthenticated'
+#   - '--set-cloudsql-instances'
+#   - 'gcpsa-sandbox:asia-east1:edward-mysql'
+#   - '--set-env-vars'
+#   - 'INSTANCE_UNIX_SOCKET=/cloudsql/gcpsa-sandbox:asia-east1:edward-mysql'
+#   - '--set-env-vars'
+#   - DB_USER=edward
+#   - '--set-env-vars'
+#   - DB_PASS=1qaz@wsx
+#   - '--set-env-vars'
+#   - 'DB_NAME=quickstart-db'
+
+# - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+#   entrypoint: gcloud
+#   args:
+#   - 'run'
+#   - 'services'
+#   - 'update'
+#   - 'edward-cloudbuild-cloudrun'
+#   - '--add-cloudsql-instances'
+#   - 'gcpsa-sandbox:asia-east1:edward-mysql'
+#   - '--update-env-vars'
+#   - INSTANCE_CONNECTION_NAME=edward-secretm-run-db-connection-name
+#   - '--update-secrets'
+#   - DB_USER=edward-secretm-run-db-user:latest
+#   - '--update-secrets'
+#   - DB_PASS=edward-secretm-run-db-pass:latest
+#   - '--update-secrets'
+#   - DB_NAME=edward-secretm-run-db-dbname:latest
+#   - '--region'
+#   - asia-east1
